removed old rateplan types and added new rateplan types (#3)
Co-authored-by: gowtham@aforo.ai <gowtham@aforo.ai>